# AI-Daily-News-Digest-

./: .env.example  .gitignore  LICENSE  README.md  app.py  example.ipynb  main.py  news_digest_20250715.txt  news_digest_20250716.txt  pyproject.toml  requirements.txt
src/: analyze_sentiment.py  digest_generator.py  news_fetcher.py  text_extract_summarizer.py
